Fix for main-content margin-top; Text content was incorrectly aligned

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -95,6 +95,7 @@ header h2 {
 #main-content {
   width: 690px;
   float: left;
+  margin-top: 163px;
 }
 
 #main-content img {
